# graphite-client

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  graphite_example1.cpp
include/variti/: graphite.hpp  tc.hpp
include/variti/graphite/: client.hpp  parameter.hpp
src/core/: tc.cpp
src/graphite/: client.cpp  parameter.cpp
